k8s/app/overlays/stg/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fastapi-app-stg
spec:
  hosts:
  - app-stg.hamedstock.com
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: fastapi-app
        port:
          number: 80
